--- a/package.json
+++ b/package.json
@@ -16,9 +16,12 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
+    "formidable": "^3.5.1",
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
-    "morgan": "^1.10.0"
+    "morgan": "^1.10.0",
+    "ssl-commerz-node": "^1.0.4",
+    "mongoose": "7.5.0"
   }
 }
