--- a/package.json
+++ b/package.json
@@ -7,6 +7,9 @@
     "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
+  "engines": {
+    "node": "18.17.1"
+  },
   "author": "Simanta-sir's-student",
   "license": "ISC",
   "dependencies": {
