--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "author": "Simanta-sir's-student",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.0",
     "bcrypt": "^5.1.1",
     "compression": "^1.7.4",
     "cors": "^2.8.5",
@@ -23,8 +24,8 @@
     "joi": "^17.11.0",
     "jsonwebtoken": "^9.0.2",
     "lodash": "^4.17.21",
+    "mongoose": "7.5.0",
     "morgan": "^1.10.0",
-    "ssl-commerz-node": "^1.0.4",
-    "mongoose": "7.5.0"
+    "ssl-commerz-node": "^1.0.4"
   }
 }
